Closed Bug 1317473 Opened 9 years ago Closed 9 years ago

GMPServiceParent::AddOnGMPThread(path) can't handle a mixture of dir separators in path

Categories

(Core :: Audio/Video: GMP, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: cpearce, Assigned: cpearce)

References

Details

Attachments

(1 file)

I see dom/media/tests/mochitest/test_peerConnection_basicH264Video.html fail when run locally on Windows because the mochitest harness is setting MOZ_GMP_PATH to a path which contains a mixture of UNIX and Windows path separators, and the NS_NewLocalFile() call in GMPServiceParent::AddOnGMPThread() is failing. We're then failing to add the fake OpenH264 plugin to the GMP service, and the WebRTC tests for H264 are failing. Frankly, I don't know how they're working in automation at all; they're certainly failing locally, and they fail in automation when I have my work-in-progress patches for Bug 1316215 applied. Maybe the WebRTC H.264 tests are using gmp-clearkey on Windows by mistake? Yet another reason why we should be asking for GMPs by name, rather than capability. We've had this sort of failure before, so I think we should just make the GMPService gracefully handle being passed paths with a mixture of dir separators, rather than fix the test harness to pass paths with consistent line endings; it'll probably just regress in future and break again.
Comment on attachment 8810594 [details] Bug 1317473 - Make GMPService accept paths with mixed dir separators. https://reviewboard.mozilla.org/r/92834/#review93152
Attachment #8810594 - Flags: review?(rjesup) → review+
Pushed by cpearce@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4fc83233df68 Make GMPService accept paths with mixed dir separators. r=jesup
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: