Bug 1317473 - Make GMPService accept paths with mixed dir separators. r=jesup

The mochitest harness on Windows sets MOZ_GMP_PATH to paths with a mixture of
Windows and UNIX dir separators, and the NS_NewLocalFile() call in
GMPServiceParent::AddOnGMPThread() fails on this input.

We've had this problem before, and if we fixed the test harness to give us
input with platform specific line endings somebody would likely just break this
again someday and have this issue again, so just make the GMP service normalize
the paths it's given to have consistent dir separators.

This makes test_peerConnection_basicH264Video.html pass when run
locally on my Windows machine.


MozReview-Commit-ID: 88hSvTdZuWg

--HG--
extra : rebase_source : 2cf63ccd1155e59f9745163cf4a28d3bdb7012ba